<resources>
    <string name="app_name">Have Eat</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_blank">Blank</string>
    <string name="action_network_paged_list">NetworkPagedList</string>
    <string name="action_room_paged_list">RoomPagedList</string>
    <string name="menu_main">Main</string>
    <string name="menu_blank">Blank</string>
    <string name="menu_list">List</string>
    <string name="menu_list_paged_room">PagedRoom</string>
    <string name="menu_list_paged_network">PagedNetwork</string>
    <string name="error_title">에러 발생</string>
    <string name="error_message">알수 없는 에러가 발생 하였습니다.</string>
    <string name="error_sns_login">SNS 로그인에 실패 하였습니다.</string>
    <string name="error_get_user_info">사용자 정보를 가지고 올수 없습니다.</string>
    <string name="error_login_request">로그인 후 기록이 가능합니다.\n지금 로그인 하시겠어요?</string>
    <string name="next">다음으로</string>
    <string name="confirm">확인</string>
    <string name="lookup">조회</string>
    <string name="save">저장</string>
    <string name="cancel">취소</string>
    <string name="edit">수정</string>
    <string name="change">변경</string>
    <string name="delete">삭제</string>
    <string name="add">추가</string>
    <string name="apply">적용</string>
    <string name="notification">알림</string>
    <string name="splash_message">스마트 AI 렌즈로 매일매일 기록하는 건강한 습관</string>
    <string name="splash_kakao">카카오톡으로 시작하기</string>
    <string name="splash_google">구글로 시작하기</string>
    <string name="splash_facebook">페이스북으로 시작하기</string>
    <string name="splash_naver">네이버로 시작하기</string>
    <string name="splash_email_login">이메일 로그인</string>
    <string name="splash_email_signin">이메일 회원가입</string>
    <string name="splash_tour">서비스 둘러보기</string>
    <string name="signin_login">로그인</string>
    <string name="signin_message">이메일 주소와 비밀번호를 입력하여\n해브잇 서비스에 로그인하세요.</string>
    <string name="signin_email">이메일 주소</string>
    <string name="signin_password">비밀번호</string>
    <string name="signin_auto">자동 로그인</string>
    <string name="signin_forgot">비밀번호를 잊어버리셨나요? </string>
    <string name="signin_social">소셜 계정으로 로그인</string>
    <string name="signin_error_title">회원 정보를 찾을 수 없습니다</string>
    <string name="signin_error_already">이미 등록된 이메일 입니다.</string>
    <string name="signin_error_message">이메일 주소를 정확하게 입력하였는지\n다시 한 번 확인해주세요.</string>
    <string name="signin_error_auth_message">이메일 인증이 필요 합니다.</string>
    <string name="signin_messageunderlogo">스마트 AI랜즈로 매일매일 기록하는 건강한 습관</string>
    <string name="signin_signup">회원 가입</string>
    <string name="signup_title">회원가입</string>
    <string name="signup_terms_title">약관동의</string>
    <string name="signup_terms_message">푸드닥터 서비스 이용 약관과\n개인정보 수집 및 이용에 동의해 주세요.</string>
    <string name="signup_terms_all">모두 동의 합니다.</string>
    <string name="signup_terms_1_check">(필수) 서비스  이용 약관 동의</string>
    <string name="signup_terms_1">서비스 이용 약관</string>
    <string name="signup_terms_1_detail">제 1 조 (목적)
본 약관은 주식회사 카카오(이하 "회사")가 제공하는 위치기반서비스에 대해 회사와 위치기반서비스를 이용하는 개인위치정보주체(이하 "이용자")간의 권리·의무 및 책임사항, 기타 필요한 사항 규정을 목적으로 합니다.

제 2 조 (이용약관의 효력 및 변경)
① 본 약관은 이용자가 본 약관에 동의하고 회사가 정한 절차에 따라 위치기반서비스의 이용자로 등록됨으로써 효력이 발생합니다.
② 회사는 법률이나 위치기반서비스의 변경사항을 반영하기 위한 목적 등으로 약관을 수정할 수 있습니다.
③ 약관이 변경되는 경우 회사는 변경사항을 최소 7일 전에 회사의 홈페이지 등 기타 공지사항 페이지를 통해 게시합니다.
④ 단, 개정되는 내용이 이용자 권리의 중대한 변경이 발생하는 경우에는 30일 전에 게시하도록 하겠습니다.
제 3 조 (약관 외 준칙)
이 약관에 명시되지 않은 사항에 대해서는 위치 정보의 보호 및 이용 등에 관한 법률, 전기통신사업법, 정보통신망 이용 촉진및 보호 등에 관한 법률 등 관계법령 및 회사가 정한 지침 등의 규정에 따릅니다.

제 4 조 (서비스의 내용)
회사는 직접 수집하거나 위치정보사업자로부터 수집한 이용자의 현재 위치 또는 현재 위치가 포함된 지역을 이용하여 아래와 같은 위치기반서비스를 제공합니다.

① 위치정보를 활용한 정보 검색결과 및 콘텐츠를 제공하거나 추천
② 생활편의를 위한 위치 공유, 위치/지역에 따른 알림, 경로 안내
③ 위치기반의 컨텐츠 분류를 위한 콘텐츠 태깅(Geotagging)
④ 위치기반의 맞춤형 광고</string>
    <string name="signup_terms_2_check">(필수) 개인정보수집 및 이용 동의 </string>
    <string name="signup_terms_2">서비스 이용 약관</string>
    <string name="signup_terms_2_detail">개인정보 수집 및 이용 안내 기입</string>
    <string name="signup_terms_show">내용 보기</string>
    <string name="signup_terms_agree_error">약관에 동의해 주세요.</string>
    <string name="signup_email_error">이메일을 정확하게 입력해 주세요.</string>
    <string name="signup_password_error">비밀번호를 정확하게 입력해 주세요.</string>
    <string name="signup_check_error">인증번호를 정확하게 입력해 주세요.</string>
    <string name="signup_info_title">회원정보 입력</string>
    <string name="signup_info_message1">로그인에 사용할\n이메일 주소와 비밀번호를 입력해주세요.</string>
    <string name="signup_info_email">이메일 주소</string>
    <string name="signup_info_password">비밀번호</string>
    <string name="signup_info_password_message">· 비밀번호는 영문 대문자, 소문자, 숫자, 특수문자 중 2개 이상 조합의 8~16자 이내로 입력해주세요.</string>
    <string name="signup_info_password_re">비밀번호 재입력</string>
    <string name="signup_info_message2">비밀번호는 영문 대문자, 소문자, 숫자, 특수문자 중 2개 이상 조합의 8~16자 이내로 입력해주세요.</string>
    <string name="signup_info_button">회원 가입</string>
    <string name="signup_info_email_error">이메일주소 형식이 맞지 않습니다.</string>
    <string name="signup_info_password_error">비밀번호 형식이 맞지 않습니다.</string>
    <string name="signup_info_passwordre_error">비밀번호가 동일하지 않습니다.</string>
    <string name="signup_check_title">인증</string>
    <string name="signup_check_message">입력하신 이메일 주소로 인증번호를 발송 하였습니다.\n아래에 인증번호를 입력해주세요.</string>
    <string name="signup_check_number">인증번호</string>
    <string name="signup_check_confirm">확인 및 가입완료</string>
    <string name="signup_complete_title">가입 완료</string>
    <string name="signup_complete_message1">가입이 완료되었습니다.</string>
    <string name="signup_complete_message2">부가 정보를 입력하시면 푸디잇이 분석하여 하루 적정 식사량을 추천해 드려요.</string>
    <string name="signup_complete_more_input">부가 정보 입력</string>
    <string name="signup_complete_or">또한</string>
    <string name="signup_complete_next">다음에 할게요.</string>
    <string name="reset_password_error_title">회원 정보를 찾을 수 없습니다</string>
    <string name="reset_password_error_message">이메일 주소를 정확하게 입력하였는지\n다시 한 번 확인해주세요.</string>
    <string name="password_find_title">임시 비밀번호 발급</string>
    <string name="password_find_message1">가입 시 사용한 이메일 주소로\n임시 비밀번호를 보내드립니다.</string>
    <string name="password_find_message2">이메일 주소가 기억나지 않으세요?</string>
    <string name="password_find_message3">회원가입에 사용한 이메일 주소가 기억나지 않는 경우\n에는 새로운 메일 주소로 다시 가입하거나 소셜 계정을\n통해 회원가입을 진행해주세요.</string>
    <string name="password_find_result">메일 발송이 완료되었습니다.\n임시 비밀번호로 로그인 한 후에 \'내 정보\'에서\n반드시 새로운 비밀번호로 변경해주세요.</string>
    <string name="password_find_result_done">로그인하러 가기</string>
    <string name="addInfo_title">반가워요.</string>
    <string name="addInfo_message">푸드닥터가 foodDoctor 님에게 가장 적절한 식사 습관을 분석하여 추천할 수 있도록 다음 정보를 알려주세요.</string>
    <string name="addInfo_sex">성별</string>
    <string name="addInfo_man">남성</string>
    <string name="addInfo_woman">여성</string>
    <string name="addInfo_year">출생년도</string>
    <string name="addInfo_height">키</string>
    <string name="addInfo_weight">몸무게</string>
    <string name="addInfo_activity">활동량</string>
    <string name="addInfo_activity1">적음</string>
    <string name="addInfo_activity2">보통</string>
    <string name="addInfo_activity3">많음</string>
    <string name="addInfo_activity4">매우 많음</string>
    <string name="addInfo_next">시작하기</string>
    <string name="amount_title">식사량 안내</string>
    <string name="amount_cal_info">하루 권장 칼로리</string>
    <string name="amount_bmi_info">하루 권장 칼로리</string>
    <string name="amount_bmi_type1">저체중</string>
    <string name="amount_bmi_type2">정상</string>
    <string name="amount_bmi_type3">과체중</string>
    <string name="amount_bmi_type4">비만</string>
    <string name="amount_message">입력하신 정보를 분석하여 하루 권장 칼로리와 BMI 지수를 제공해 드렸습니다.\n건강한 식습관을 통해 정상 체중에 도전해 보는게 어떨까요?\n지금부터 식사 기록을 통해 건강한 식습관을 시작해보세요.</string>
    <string name="amount_start">시작하기</string>
    <string name="main_history_title">식사기록</string>
    <string name="foodInfo_title">음식 정보</string>
    <string name="foodInfo_title_add">음식 추가</string>
    <string name="main_camera_title">음식 찍기</string>
    <string name="main_style_title">내 습관</string>
    <string name="main_setting_title">설정</string>
    <string name="main_history_part_title">%s(%dkcal)</string>
    <string name="main_history_part_message">%s(%dkcal)</string>
    <string name="main_history_part_empty">식사를 기록해주세요.</string>
    <string name="main_history_part_detail">자세히보기</string>
    <string name="history_total">총 섭취열량</string>
    <string name="history_cal">열량</string>
    <string name="history_sugar">첨가당</string>
    <string name="history_total_message">적정 섭취 열량 %dkcal, 첨가당 %dg</string>
    <string name="history_part_morning">아침</string>
    <string name="history_part_lunch">점심</string>
    <string name="history_part_dinner">저녁</string>
    <string name="history_part_snack">간식</string>
    <string name="history_detail_addButton">음식추가</string>
    <string name="history_detail_saveButton">기록 하기</string>
    <string name="history_detail_total_calorie">섭취 칼로리</string>
    <string name="history_detail_intake_message">%dkcal · %s인분(%.0fg)</string>
    <string name="history_detail_cell_info">음식 정보</string>
    <string name="history_detail_cell_change">섭취량 변경</string>
    <string name="history_detail_cell_delete">삭제</string>
    <string name="history_guest_message">건강한 식습관을 유지하려면\n매일매일 무엇을 얼마나 먹어야 할까요?\n푸드닥터 회원이 되어 바로 확인해보세요!</string>
    <string name="history_guest_signin">회원가입</string>
    <string name="history_detail_recognize_info">푸드닥터 AI가 음식 정보를 분석하고 있어요.</string>
    <string name="intake_title">섭취량 변경</string>
    <string name="intake_message">인분(1인분,%.0fg)</string>
    <string name="carbohydrate">탄수화물</string>
    <string name="protein">단백질</string>
    <string name="fat">지방</string>
    <string name="sugar">첨가당</string>
    <string name="cal">섭취열량</string>
    <string name="foodInfo_hint">음식 또는 식재료 이름으로 검색</string>
    <string name="foodInfo_history">내가 찾은 검색어</string>
    <string name="foodInfoDetail_infoTitle">영양정보</string>
    <string name="foodInfoDetail_imageTitle">요리재료</string>
    <string name="close">닫기</string>
    <string name="dialog_write_diets_title">식사 기록하기</string>
    <string name="dialog_write_diets_camera">카메라로 식사 촬영</string>
    <string name="dialog_write_diets_album">앨범에 저장된 사진 업로드</string>
    <string name="dialog_write_diets_search">직접 입력</string>
    <string name="setting_user_info">계정 정보</string>
    <string name="setting_user_state">신체 정보</string>
    <string name="setting_terms">이용약관</string>
    <string name="setting_privacy">개인정보처리방침</string>
    <string name="setting_logout">로그아웃</string>
    <string name="setting_withdrawal">회원 탈퇴</string>
    <string name="setting_withdrawal_message">회원 탈퇴 시 모든 데이터가 삭제 됩니다.\n탈퇴하시겠습니까?</string>
    <string name="setting_userInfo_id">계정</string>
    <string name="setting_userInfo_pass">비밀번호</string>
    <string name="setting_userInfo_kakao">카카오 계정</string>
    <string name="setting_userInfo_google">구글 계정</string>
    <string name="setting_userInfo_facebook">페이스북 계정</string>
    <string name="setting_userInfo_naver">네이버 계정</string>
    <string name="setting_userInfo_passOrg">현재 비밀번호</string>
    <string name="setting_userInfo_passChange">변경할 비밀번호</string>
    <string name="setting_userInfo_passChangeRe">변경할 비밀번호 재입력</string>
    <string name="setting_userInfo_save">변경사항 저장</string>
    <string name="setting_userState_save">변경사항 저장</string>
    <string name="error_value">정확한 값을 넣어주세요.</string>
    <string name="error_password">현재 비밀번호가 일치 하지 않습니다.</string>
    <string name="error_password_format">현재 비밀번호가 일치 하지 않습니다.</string>
    <string name="sun">일</string>
    <string name="mon">월</string>
    <string name="tue">화</string>
    <string name="wed">수</string>
    <string name="thu">목</string>
    <string name="fri">금</string>
    <string name="sat">토</string>
    <string name="today">오늘</string>
    <string name="camera_title">식사 촬영</string>
    <string name="camera_hint">음식이잘리지 않도록\n상단 정면에서 촬영해주세요.</string>
    <string name="camera_guide">촬영가이드</string>
    <string name="camera_guide_title">촬영 가이드</string>
    <string name="des_prev_month">이전 달</string>
    <string name="des_next_month">다음 달</string>
</resources>