<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_bottom_history"
        android:orderInCategory="101"
        android:icon="@drawable/menu1"
        android:title="@string/main_history_title"/>
    <item
        android:id="@+id/menu_bottom_habit"
        android:orderInCategory="102"
        android:icon="@drawable/menu2"
        android:title="@string/main_style_title">
    </item>
    <item
        android:id="@+id/menu_bottom_foodinfo"
        android:orderInCategory="104"
        android:icon="@drawable/menu3"
        android:title="@string/foodInfo_title">
    </item>
    <item
        android:id="@+id/menu_bottom_login"
        android:orderInCategory="106"
        android:icon="@drawable/menu4"
        android:title="@string/signin_login">
    </item>
</menu>
