<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="@dimen/default_layout_padding"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/bg_dialog">

        <androidx.cardview.widget.CardView
            android:id="@+id/left"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="13dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="2dp"
            app:cardPreventCornerOverlap="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_left"
                android:layout_gravity="center"
                android:contentDescription="@string/des_prev_month"
                android:scaleType="center"/>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/right"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="13dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_right"
                android:layout_gravity="center"
                android:contentDescription="@string/des_next_month"
                android:scaleType="center"/>
        </androidx.cardview.widget.CardView>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textStyle="bold"
            android:textSize="22.5sp"
            android:textColor="@color/text_black"/>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/dayOfWeek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/left" >
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:text="@string/sun"
                android:textSize="15sp"
                android:textColor="#868686" />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:text="@string/mon"
                android:textSize="15sp"
                android:textColor="#868686" />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:text="@string/tue"
                android:textSize="15sp"
                android:textColor="#868686" />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:text="@string/wed"
                android:textSize="15sp"
                android:textColor="#868686" />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:text="@string/thu"
                android:textSize="15sp"
                android:textColor="#868686" />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:text="@string/fri"
                android:textSize="15sp"
                android:textColor="#868686" />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:text="@string/sat"
                android:textSize="15sp"
                android:textColor="#868686" />
        </androidx.appcompat.widget.LinearLayoutCompat>
        <kr.snclab.haveeat.ui.dialog.calendar.CalendarViewPager
            android:id="@+id/calendar"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dayOfWeek"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button"
            android:layout_width="126dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="4dp"
            android:text="@string/close"
            android:textSize="15sp"
            style="@style/Button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calendar" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>