<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="kr.snclab.haveeat.ui.signin.SigninViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/default_layout_padding">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/view_signin_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/close"
            app:srcCompat="@drawable/x_btn"
            android:visibility="gone"/>


        <ImageView
            android:id="@+id/view_signin_title"
            android:layout_width="301.9dp"
            android:layout_height="32.7dp"
            android:layout_marginTop="120dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_logo" />

        <TextView
            android:id="@+id/view_signin_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:text="@string/signin_messageunderlogo"
            android:textSize="12sp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_signin_title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/view_signin_email_layout"
            style="@style/EditTextLayout"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_signin_message">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/view_signin_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/signin_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:text="@={vm.email}"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/view_signin_password_layout"
            style="@style/EditTextLayout"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="13dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_signin_email_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/view_signin_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signin_password"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:singleLine="true"
                android:text="@={vm.password}"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/view_signin_forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/signin_forgot"
            android:textColor="@color/gray_text"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_signin_password_layout" />


        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/view_signin_auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:buttonTint="@color/colorgreen"
            android:checked="true"
            android:text="@string/signin_auto"
            android:textColor="#565656"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.239"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_signin_forgot" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/view_signin_login"
            style="@style/Button"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:text="@string/signin_login"
            app:layout_constraintBottom_toTopOf="@+id/view_signin_social"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/view_signin_social"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin_social"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
