<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@drawable/bg_dialog"
        android:layout_margin="@dimen/default_layout_padding"
        android:padding="@dimen/default_layout_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#333333"
            android:textSize="22sp"
            android:textStyle="bold"
            android:text="@string/dialog_write_diets_title"
            android:layout_marginTop="17dp"/>

        <FrameLayout
            android:id="@+id/view_writeDietsDialog_camera"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="44dp"
            android:background="@drawable/bg_rect_whiteblue_27radius">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:gravity="center"
                android:text="@string/dialog_write_diets_camera"
                android:drawablePadding="9.5dp"
                app:drawableStartCompat="@drawable/ic_history_camera" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/view_writeDietsDialog_album"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_rect_whiteblue_27radius">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:gravity="center"
                android:text="@string/dialog_write_diets_album"
                android:drawablePadding="9.5dp"
                app:drawableStartCompat="@drawable/ic_history_album" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/view_writeDietsDialog_search"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_rect_whiteblue_27radius">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:text="@string/dialog_write_diets_search"
                android:gravity="center"
                android:drawablePadding="9.5dp"
                app:drawableStartCompat="@drawable/ic_history_self" />
        </FrameLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/view_writeDietsDialog_button"
            android:layout_width="115dp"
            android:layout_height="50dp"
            android:layout_marginTop="79dp"
            android:text="@string/close"
            android:textSize="18sp"
            style="@style/Button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_dialog_message" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>